src/objects/OrderApi__Renewal_Path__c.object
<CustomObject>
    <description>Defines the available set of items/rules , a subscription can be renewed.</description>
    <fields>
        <fullName>OrderApi__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the subscription item will be the default renewal path for system-processed renewals.</description>
        <inlineHelpText>When checked, the subscription item will be the default renewal path for system-processed renewals.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Defines the subscription item that will have a renewal path.</description>
        <inlineHelpText>**Required** Defines the subscription item that will have a renewal path.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Renewal Paths</relationshipLabel>
        <relationshipName>Renewal_Paths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Renew_Into_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Defines the subscription item(s) that can be renewed into.</description>
        <inlineHelpText>**Required** Defines the subscription item(s) that can be renewed into.</inlineHelpText>
        <label>Renew Into Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Renewal Paths (Renew Into Item)</relationshipLabel>
        <relationshipName>Renewal_Paths1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Rule_Type__c</fullName>
        <description>Defines whether the renewal path is triggered by the number of completed terms, or by a property of the subscriber’s account/contact.</description>
        <inlineHelpText>Defines whether the renewal path is triggered by the number of completed terms, or by a property of the subscriber’s account/contact.</inlineHelpText>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account/Contact</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Sort_Order__c</fullName>
        <description>Defines the order which subscriptions are presented during renewals.</description>
        <inlineHelpText>Defines the order which subscriptions are presented during renewals.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term__c</fullName>
        <description>Defines the number of terms that must be completed to trigger the renewal path.</description>
        <inlineHelpText>Defines the number of terms that must be completed to trigger the renewal path.</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Renewal Path</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Renewal Path ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>